# native-camera-vulkan

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  version.cmake
app/src/main/cpp/core/: android_permissions.cpp  android_permissions.hpp  event_loop.hpp
app/src/main/cpp/devices/: accelerometer.cpp  accelerometer.hpp  camera.cpp  camera.hpp  image_reader.cpp  image_reader.hpp
app/src/main/cpp/engine/: generic.hpp  vulkan.hpp
app/src/main/cpp/graphics/: complex_context.cpp  complex_context.hpp  pipeline.cpp  pipeline.hpp  simple_context.cpp  simple_context.hpp  vulkan_context.cpp  vulkan_context.hpp
app/src/main/cpp/graphics/data/: index.hpp  model_view_projection.hpp  texture.cpp  texture.hpp  types.hpp  vertex.hpp
app/src/main/cpp/graphics/resources/: base.cpp  base.hpp  buffer.cpp  buffer.hpp  image.cpp  image.hpp  types.hpp
app/src/main/cpp/metadata/: version.cpp  version.hpp
app/src/main/cpp/utilities/: helpers.hpp  log.hpp
app/src/main/cpp/vk_util/: vk_helpers.cpp  vk_helpers.hpp  vk_version.hpp
app/src/main/res/values/: strings.xml
app/src/main/shaders/: camera-mapping.frag  image-mapping.frag  simple.vert
gradle/wrapper/: gradle-wrapper.properties
